# orbits

./: .gitignore  .gitmodules  .mypy.ini  README.md  __init__.py  celestial_bodies.py  celestial_body.py  config.py  constants.py  motion_tracker.py  orbit.py  orbit_simulator.py  orbits.py  pyproject.toml  requirements-dev.txt  setup.sh  simulation_mode.py
.github/workflows/: ci.yaml
docs/orbits/: celestial_body.html  config.html  constants.html  index.html  motion_tracker.html  orbit.html  orbit_simulator.html  simulation_mode.html
docs/orbits/tests/: index.html  test_orbit_simulator.html
tests/: .pytest.ini  __init__.py  test_orbit_simulator.py
tools/: generate_docs.sh  run_mypy.sh  run_tests.sh
