[build-system]
    requires = ["setuptools>=45", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "orbits"
    version = "0.1.0"
    description = "Simulates the rotation and orbital physics of celestial bodies."
    authors = [{name = "Jim Tooker", email = "none@me.com"}]
    readme = "README.md"
    requires-python = ">=3.10"
    dependencies = [
        "vpython",
    ]

[project.urls]
    "Homepage" = "https://github.com/jim-tooker/orbits"

[tool.setuptools]
packages = ["orbits"]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pdoc",
]
